adds hw-module03 v2

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="page">
     <div class="wrapper">
         <div class="first-article">
             <h2>Agancy profile</h2>
