adds fixed title

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -11,7 +11,7 @@
 <body class="page">
     <div class="wrapper">
         <div class="first-article">
-            <h2>Agancy profile</h2>
+            <h2>Agency profile</h2>
             <img src="images/airplane.png" alt="airplane">
             <p class="subtitle">Duis condimentum metus nisi, sit amet semper massa finibus a. Curabitur ultricies velit non mauris dictum, eget
                 dapibus eros ornare. </p>
