adds new columns

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -43,19 +43,18 @@
                 a rhoncus facilisis, odio urna cursus justo, nec varius massa felis in tellus. Curabitur ut ligula at velit
                 tempor finibus eget sed dui. Sed feugiat id eros non dapibus. In eget interdum velit, non vestibulum tortor.
                 Mauris quis molestie libero. Cras at ante vitae felis pharetra aliquet non eget metus.</p>
-            <div class="column">
-                <p>Maecenas maximus tortor.</p>
-                <p>Morbi finibus.</p>
-                <p>Nunc tempus gravida.</p>
-                <p>Integer maximus.</p>
-                <p>Donec finibus sodales.</p>
-            </div>
-            <div class="column">
-                <p>Nulla accumsan eleifend.</p>
-                <p>Mauris ut sem.</p>
-                <p>Proin elementum metus.</p>
-                <p>Cras consectetur libero.</p>
-                <p>Mauris sit amet.</p>
+            <div class="columns">
+                <ul>
+                <li>Maecenas maximus tortor.</li>
+                <li>Morbi finibus.</li>
+                <li>Nunc tempus gravida.</li>
+                <li>Integer maximus.</li>
+                <li>Donec finibus sodales.</li>
+                <li>Nulla accumsan eleifend.</li>
+                <li>Mauris ut sem.</li>
+                <li>Proin elementum metus.</li>
+                <li>Cras consectetur libero.</li>
+                </ul>
             </div>
         </div>
     </div>
