adds basic markup

--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -21,8 +21,8 @@
                 dapibus ex, sit amet ullamcorper erat. Phasellus iaculis mauris lacus, ac venenatis libero rhoncus id. Integer
                 commodo scelerisque malesuada. </p>
         </div>
-        <div class="second-article">
-            <h2>Our priciples</h2>
+        <ul class="second-article">
+            <!--<h2>Our priciples</h2>
             <h3>Aliquam in.</h3>
             <p>Duis condimentum metus nisi, sit amet semper massa finibus a. Curabitur ultricies velit non mauris dictum, eget
                 dapibus eros ornare. Suspendisse varius eros vitae purus suscipit scelerisque.</p>
@@ -32,7 +32,24 @@
             <h3>Quisque at.</h3>
             <p>Proin quis rhoncus neque. Integer aliquet quis elit nec cursus. Integer vel tincidunt orci. Sed porta nisl varius
                 placerat ultricies. Proin facilisis laoreet ultricies. Donec aliquet non mi sit amet semper.</p>
-        </div>
+            -->
+            <li>
+                <h3>Aliquam in.</h3>
+                <p>Duis condimentum metus nisi, sit amet semper massa finibus a. Curabitur ultricies velit non mauris dictum,
+                    eget eget dapibus eros ornare. Suspendisse varius eros vitae purus suscipit scelerisque.</p>
+            </li>
+            <li>
+                <h3>Integer ultrices.</h3>
+                <p>Pellentesque faucibus nunc et vulputate congue. Aliquam consectetur mattis convallis. Aliquam vulputate velit
+                    ante, eget condimentum nisl cursus in. Cras aliquet ex eu semper imperdiet. </p>
+            </li>
+            <li>
+                <h3>Quisque at.</h3>
+                <p>Proin quis rhoncus neque. Integer aliquet quis elit nec cursus. Integer vel tincidunt orci. Sed porta nisl
+                    varius placerat ultricies. Proin facilisis laoreet ultricies. Donec aliquet non mi sit amet semper.</p>
+            </li>
+
+        </ul>
         <div class="third-article">
             <h2>What we offer</h2>
             <p class="subtitle">Pellentesque ante nisi, lacinia finibus feugiat sed, varius eget leo. Proin a sodales lorem. Morbi magna velit,
@@ -43,8 +60,7 @@
                 a rhoncus facilisis, odio urna cursus justo, nec varius massa felis in tellus. Curabitur ut ligula at velit
                 tempor finibus eget sed dui. Sed feugiat id eros non dapibus. In eget interdum velit, non vestibulum tortor.
                 Mauris quis molestie libero. Cras at ante vitae felis pharetra aliquet non eget metus.</p>
-            <div class="columns">
-                <ul>
+            <ul class="columns">
                 <li>Maecenas maximus tortor.</li>
                 <li>Morbi finibus.</li>
                 <li>Nunc tempus gravida.</li>
@@ -54,8 +70,8 @@
                 <li>Mauris ut sem.</li>
                 <li>Proin elementum metus.</li>
                 <li>Cras consectetur libero.</li>
-                </ul>
-            </div>
+            </ul>
+
         </div>
     </div>
 </body>
