--- a/html-css/module04/index.html
+++ b/html-css/module04/index.html
@@ -12,7 +12,7 @@
 <body class="page">
     <div class="wrapper">
         <div class="topPart">
-            <div class="first-article">
+            <div class="left-article">
                 <h2>Agency profile</h2>
                 <img src="images/world.png" alt="world">
                 <p class="subtitle">Gellentesque imperdiet gerti loki holewvelit neque. Ut vestibulum mi sit</p>
@@ -28,27 +28,35 @@
                     actre pharetra non scelerisque sit amet orci. Nulla consequat neque pretium sagittis vulputate. Fusce
                     dictum velit at diam facilisis consectetur. Donec auctor. </p>
             </div>
-            <ul class="list">
+            <div class="right-article">
                 <h2>Our priciples</h2>
-                <li class="list-item">
-                    <h3>Pellentesque imperdiet. </h3>
-                    <p>Quisque sed quam justo. Nulla kilor congue sed turpis nec lacinia. Nulla facilisi. Ut sit amet gravida
-                        telluswil. Morbi id consequat
-                    </p>
-                </li>
-                <li class="list-item">
-                    <h3>Aellentesque omperdie.</h3>
-                    <p>Fuisque sed quam justo. Cngueteri sed turpis nec lacinia. Nulla facilisi. Ut sit amet gravida tellus.
-                        Morbi idy consequat eros. Vivamus </p>
-                </li>
-                <li class="list-item">
-                    <h3>Grellentesque imperdik.</h3>
-                    <p>Yisque sed quam justo. Nullaongue sed turpis nec lacinia. Julla facilisi. Ut sit amet gravida tellus.
-                        Morbi idy consequat erosamus
-                    </p>
-                </li>
+                <ul class="list">
+                    <li class="list-item">
+                        <div class="box">
+                            <h3>Pellentesque imperdiet. </h3>
+                            <p>Quisque sed quam justo. Nulla kilor congue sed turpis nec lacinia. Nulla facilisi. Ut sit amet
+                                gravida telluswil. Morbi id consequat
+                            </p>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="box">
+                            <h3>Aellentesque omperdie.</h3>
+                            <p>Fuisque sed quam justo. Cngueteri sed turpis nec lacinia. Nulla facilisi. Ut sit amet gravida
+                                tellus. Morbi idy consequat eros. Vivamus </p>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="box">
+                            <h3>Grellentesque imperdik.</h3>
+                            <p>Yisque sed quam justo. Nullaongue sed turpis nec lacinia. Julla facilisi. Ut sit amet gravida
+                                tellus. Morbi idy consequat erosamus
+                            </p>
+                        </div>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </div>
         <div class="bottom-part">
 
@@ -83,8 +91,8 @@
                 <h2>Testimonial</h2>
                 <p>Nnatoque penatibus tkamet magnis dis parturient montes, nascetur ridiculus mustro lito. Quisque vehicula
                     eu nisleweri teget convallis. Vivamus sit amet fringilla nibt fringilla.</p>
-                    <h3>Mark Johnson</h3>
-                    <h4>Director of Product Management</h4>
+                <h3>Mark Johnson</h3>
+                <h4>Director of Product Management</h4>
             </div>
         </div>
     </div>
