adds fixed ver2.0

--- a/html-css/module04/index.html
+++ b/html-css/module04/index.html
@@ -11,8 +11,8 @@
 
 <body class="page">
     <div class="wrapper">
-        <div class="topPart">
-            <div class="left-article">
+        <div class="top-part">
+            <div class="agancy-profile">
                 <h2>Agency profile</h2>
                 <img src="images/world.png" alt="world">
                 <p class="subtitle">Gellentesque imperdiet gerti loki holewvelit neque. Ut vestibulum mi sit</p>
@@ -28,7 +28,7 @@
                     actre pharetra non scelerisque sit amet orci. Nulla consequat neque pretium sagittis vulputate. Fusce
                     dictum velit at diam facilisis consectetur. Donec auctor. </p>
             </div>
-            <div class="right-article">
+            <div class="priciples-section">
                 <h2>Our priciples</h2>
                 <ul class="list">
                     <li class="list-item">
