--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -14,7 +14,7 @@
 
 <body class="page">
     <header class="header">
-        <nav>
+        <nav id="to-top-bottom">
             <ul class="menu">
                 <li class="menu-item">
                     <a href="#">Home</a>
@@ -75,18 +75,41 @@
         </section>
         <article class="article">
             <h2>Top destinations</h2>
-            <div class="pop-up-block">
-                <h2>Venice</h2>
-                <p>Lorem ipsum dolor site geril amet, consectetur cing eliti. Suspendisse nulla leo mew dignissim eu velite
-                    a rew qw vehicula lacinia arcufasecro. Aenean lacinia ucibusy fase tortor ut feugiat. Rabitur oliti aliquam
-                    bibendum olor quis malesuadivamu.</p>
+
+            <div class="card-destinations">
+                <div class="pop-up-block">
+                    <h2>Venice</h2>
+                    <p>Lorem ipsum dolor site geril amet, consectetur cing eliti. Suspendisse nulla leo mew dignissim eu velite
+                        a rew qw vehicula lacinia arcufasecro. Aenean lacinia ucibusy fase tortor ut feugiat. Rabitur oliti
+                        aliquam bibendum olor quis malesuadivamu.</p>
+                    <a href="#">Details</a>
+                </div>
+                <img src="../img/mini-venice.png" alt="city Venice" class="card-img">
             </div>
-            <div class="gallery">
-                <img src="../img/mini-venice.png" alt="city Venice">
-                <img src="../img/mini-ny.png" alt="city New York">
-                <img src="../img/mini-paris.png" alt="city Paris">
+            <div class="card-destinations">
+                <div class="pop-up-block">
+                    <h2>New York</h2>
+                    <p>Lorem ipsum dolor site geril amet, consectetur cing eliti. Suspendisse nulla leo mew dignissim eu velite
+                        a rew qw vehicula lacinia arcufasecro. Aenean lacinia ucibusy fase tortor ut feugiat. Rabitur oliti
+                        aliquam bibendum olor quis malesuadivamu.</p>
+                    <a href="#">Details</a>
+                </div>
+                <img src="../img/mini-ny.png" alt="city New York" class="card-img">
+            </div>
+            <div class="card-destinations">
+                <div class="pop-up-block">
+                    <h2>Paris</h2>
+                    <p>Lorem ipsum dolor site geril amet, consectetur cing eliti. Suspendisse nulla leo mew dignissim eu velite
+                        a rew qw vehicula lacinia arcufasecro. Aenean lacinia ucibusy fase tortor ut feugiat. Rabitur oliti
+                        aliquam bibendum olor quis malesuadivamu.</p>
+                    <a href="#">Details</a>
+                </div>
+                <img src="../img/mini-paris.png" alt="city Paris" class="card-img">
             </div>
         </article>
+        <div >
+            <a href="#to-top-bottom" class="to-top-bottom"></a>
+        </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
