adds to-top-buttom-v2

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -47,9 +47,9 @@
                 </li>
             </ul>
         </nav>
-        <logo class="logo">
+        <div class="logo">
             <p>Journey</p>
-        </logo>
+        </div>
     </header>
     <main class="main">
         <section class="section-carousel">
@@ -69,8 +69,8 @@
                 </div>
             </div>
             <div>
-                <p class="title">There are plenty of places</p>
-                <p class="subtitle">That are worth seeing</p>
+                <h3 class="title">There are plenty of places</h3>
+                <h2 class="subtitle">That are worth seeing</h2>
             </div>
         </section>
         <article class="article">
