--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -56,16 +56,16 @@
             <div class="carousel">
 
                 <div>
-                    <img src="../img/ship.png" alt="ship on the beach">
+                    <img src="img/ship.png" alt="ship on the beach">
                 </div>
                 <div>
-                    <img src="../img/rome.png" alt="city Rome">
+                    <img src="img/rome.png" alt="city Rome">
                 </div>
                 <div>
-                    <img src="../img/city.png" alt="city">
+                    <img src="img/city.png" alt="city">
                 </div>
                 <div>
-                    <img src="../img/venice.png" alt="city Venice">
+                    <img src="img/venice.png" alt="city Venice">
                 </div>
             </div>
             <div>
@@ -84,7 +84,7 @@
                         aliquam bibendum olor quis malesuadivamu.</p>
                     <a href="#">Details</a>
                 </div>
-                <img src="../img/mini-venice.png" alt="city Venice" class="card-img">
+                <img src="img/mini-venice.png" alt="city Venice" class="card-img">
             </div>
             <div class="card-destinations">
                 <div class="pop-up-block">
@@ -94,7 +94,7 @@
                         aliquam bibendum olor quis malesuadivamu.</p>
                     <a href="#">Details</a>
                 </div>
-                <img src="../img/mini-ny.png" alt="city New York" class="card-img">
+                <img src="img/mini-ny.png" alt="city New York" class="card-img">
             </div>
             <div class="card-destinations">
                 <div class="pop-up-block">
@@ -104,7 +104,7 @@
                         aliquam bibendum olor quis malesuadivamu.</p>
                     <a href="#">Details</a>
                 </div>
-                <img src="../img/mini-paris.png" alt="city Paris" class="card-img">
+                <img src="img/mini-paris.png" alt="city Paris" class="card-img">
             </div>
         </article>
         <div >
