--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <main class="main">
-        <section class="section-carousel">
+        <div>
             <div class="carousel">
 
                 <div>
@@ -72,8 +72,8 @@
                 <h3 class="title">There are plenty of places</h3>
                 <h2 class="subtitle">That are worth seeing</h2>
             </div>
-        </section>
-        <article class="article">
+        </div>
+        <section class="article">
             <h2>Top destinations</h2>
 
             <div class="card-destinations">
@@ -106,7 +106,7 @@
                 </div>
                 <img src="img/mini-paris.png" alt="city Paris" class="card-img">
             </div>
-        </article>
+        </section>
         <div >
             <a href="#to-top-bottom" class="to-top-bottom"></a>
         </div>
