adds logo as link

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -48,7 +48,7 @@
             </ul>
         </nav>
         <div class="logo">
-            <p>Journey</p>
+            <a href="#">Journey</a>
         </div>
     </header>
     <main class="main">
