--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <main class="main">
-        <div>
+        <div class="section-carousel">
             <div class="carousel">
 
                 <div>
