adds to-top-button

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>hw-module04</title>
+    <title>hw-module06</title>
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
@@ -14,7 +14,9 @@
 
 <body class="page">
     <header class="header">
+
         <nav id="to-top-bottom">
+
             <ul class="menu">
                 <li class="menu-item">
                     <a href="#">Home</a>
@@ -47,9 +49,10 @@
                 </li>
             </ul>
             <div class="logo">
-                    <a href="#">Journey</a>
-                </div>
-        </nav>  
+                <a href="#">Journey</a>
+            </div>
+        </nav>
+
     </header>
     <main class="wrapper">
         <article class="top-part">
@@ -137,6 +140,9 @@
                 </div>
             </aside>
         </article>
+        <div>
+            <a href="#to-top-bottom" class="to-top-bottom"></a>
+        </div>
     </main>
     <footer class="footer">
         <nav>
@@ -168,16 +174,28 @@
             </ul>
         </nav>
         <div class="social-icons">
-        <!--<i title="twitter"></i>
-        <i title="facebook"></i>
-        <i title="google-plus"></i>
-        <i title="linkedin"></i>-->
-        <ul>
-            <li><a href="#"><img src="https://image.flaticon.com/icons/svg/145/145812.svg" alt="twitter"></a></li>
-            <li><a href="#"><img src="https://image.flaticon.com/icons/svg/179/179319.svg" alt="facebook"></a></li>
-            <li><a href="#"><img src="https://image.flaticon.com/icons/svg/179/179326.svg" alt="google-plus"></a></li>
-            <li><a href="#"><img src="https://image.flaticon.com/icons/svg/179/179330.svg" alt="linkedin"></a></li>
-        </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="https://image.flaticon.com/icons/svg/145/145812.svg" alt="twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://image.flaticon.com/icons/svg/179/179319.svg" alt="facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://image.flaticon.com/icons/svg/179/179326.svg" alt="google-plus">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://image.flaticon.com/icons/svg/179/179330.svg" alt="linkedin">
+                    </a>
+                </li>
+            </ul>
         </div>
         <p>Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com</p>
     </footer>
