--- a/html-css/module-06/gallery-1024/index.html
+++ b/html-css/module-06/gallery-1024/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>hw6-2</title>
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
@@ -58,35 +58,44 @@
     <main class="wrapper">
         <section class="section">
             <h2>Our gallery</h2>
-            <div class="gallery">
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/hoRog6/Layer_87.png" alt="alt">
-                </div>
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/nCjwZR/Layer_88.png" alt="alt">
-                </div>
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/cfYZM6/Layer_89.png" alt="alt">
-                </div>
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/ish5Tm/Layer_90.png" alt="alt">
-                </div>
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/cTPwZR/Layer_91.png" alt="alt">
-                </div>
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/hjo116/Layer_92.png" alt="alt">
-                </div>
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/kxTOER/Layer_93.png" alt="alt">
-                </div>
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/gEUkTm/Layer_94.png" alt="alt">
-                </div>
-                <div class="gallery-img">
-                    <img src="https://image.ibb.co/j50EM6/Layer_95.png" alt="alt">
-                </div>
-            </div>
+            <ul class="gallery">
+                <li>
+                    <img src="https://image.ibb.co/hoRog6/Layer_87.png" alt="waterfall">
+                    <i class="icon-zoom"></i>
+                </li>
+                <li>
+                    <img src="https://image.ibb.co/nCjwZR/Layer_88.png" alt="China">
+                    <i class="icon-zoom"></i>
+                </li>
+                <li>
+                    <img src="https://image.ibb.co/cfYZM6/Layer_89.png" alt="hotel">
+                    <i class="icon-zoom"></i>
+                </li>
+                <li>
+                    <img src="https://image.ibb.co/ish5Tm/Layer_90.png" alt="rome">
+                    <i class="icon-zoom"></i>
+                </li>
+                <li>
+                    <img src="https://image.ibb.co/cTPwZR/Layer_91.png" alt="island">
+                    <i class="icon-zoom"></i>
+                </li>
+                <li>
+                    <img src="https://image.ibb.co/hjo116/Layer_92.png" alt="ice">
+                    <i class="icon-zoom"></i>
+                </li>
+                <li>
+                    <img src="https://image.ibb.co/kxTOER/Layer_93.png" alt="bridge">
+                    <i class="icon-zoom"></i>
+                </li>
+                <li>
+                    <img src="https://image.ibb.co/gEUkTm/Layer_94.png" alt="Paris">
+                    <i class="icon-zoom"></i>
+                </li>
+                <li>
+                    <img src="https://image.ibb.co/j50EM6/Layer_95.png" alt="mountain">
+                    <i class="icon-zoom"></i>
+                </li>
+            </ul>
         </section>
         <div>
             <a href="#to-top-bottom" class="to-top-bottom"></a>
