adds final changes

--- a/html-css/module-06/gallery-1024/index.html
+++ b/html-css/module-06/gallery-1024/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>hw6-2</title>
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/variables.css">
@@ -101,9 +100,9 @@
             <a href="#to-top-bottom" class="to-top-bottom"></a>
         </div>
     </main>
-    <footer class="footer">
-        <nav>
-            <ul class="menu-footer">
+    <nav class="nav-section">
+        <div class="menu-part">
+            <ul>
                 <li>
                     <a href="#">FAQS Page</a>
                 </li>
@@ -114,9 +113,6 @@
                     <a href="#">Insurance</a>
                 </li>
                 <li>
-                    <a href="#">Contact Us</a>
-                </li>
-                <li>
                     <a href="#">People Say</a>
                 </li>
                 <li>
@@ -125,11 +121,23 @@
                 <li>
                     <a href="#">Family Travel</a>
                 </li>
+            </ul>
+        </div>
+        <div class="contacts-part">
+            <ul>
                 <li>
-                    <a href="#">TEL: 1-800-234-5678 info@demolink.org</a>
+                    <a href="#">Contact Us</a>
+                </li>
+                <li>
+                    <a href="#">TEL: 1-800-234-5678 </a>
+                </li>
+                <li>
+                    <a href="#">info@demolink.org</a>
                 </li>
             </ul>
-        </nav>
+        </div>
+    </nav>
+    <footer class="footer">
         <div class="social-icons">
             <ul>
                 <li>
