--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -142,9 +142,9 @@
             <a href="#to-top-bottom" class="to-top-bottom"></a>
         </div>
     </main>
-    <footer class="footer">
-        <nav>
-            <ul class="menu-footer">
+    <nav class="nav-section">
+        <div class="menu-part">
+            <ul>
                 <li>
                     <a href="#">FAQS Page</a>
                 </li>
@@ -155,9 +155,6 @@
                     <a href="#">Insurance</a>
                 </li>
                 <li>
-                    <a href="#">Contact Us</a>
-                </li>
-                <li>
                     <a href="#">People Say</a>
                 </li>
                 <li>
@@ -166,11 +163,23 @@
                 <li>
                     <a href="#">Family Travel</a>
                 </li>
+            </ul>
+        </div>
+        <div class="contacts-part">
+            <ul>
                 <li>
-                    <a href="#">TEL: 1-800-234-5678 info@demolink.org</a>
+                    <a href="#">Contact Us</a>
+                </li>
+                <li>
+                    <a href="#">TEL: 1-800-234-5678 </a>
+                </li>
+                <li>
+                    <a href="#">info@demolink.org</a>
                 </li>
             </ul>
-        </nav>
+        </div>
+    </nav>
+    <footer class="footer">
         <div class="social-icons">
             <ul>
                 <li>
