--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -53,8 +53,8 @@
 
     </header>
     <main class="wrapper">
-        <article class="top-part">
-            <section class="agancy-profile">
+        <section class="top-part">
+            <article class="agancy-profile">
                 <h2>Agency profile</h2>
                 <img src="img/world.png" alt="world">
                 <p class="subtitle">Gellentesque imperdiet gerti loki holewvelit neque. Ut vestibulum mi sit</p>
@@ -69,7 +69,7 @@
                     Pellentesque laoreet purus congue justo laoreet, blandit tempor leo molestie. Vivamus orci sem molestie
                     actre pharetra non scelerisque sit amet orci. Nulla consequat neque pretium sagittis vulputate. Fusce
                     dictum velit at diam facilisis consectetur. Donec auctor. </p>
-            </section>
+            </article>
             <aside class="priciples-aside">
                 <h2>Our priciples</h2>
                 <ul class="list">
@@ -99,9 +99,9 @@
 
                 </ul>
             </aside>
-        </article>
-        <article class="bottom-part">
-            <section class="offer-section">
+        </section>
+        <section class="bottom-part">
+            <article class="offer-section">
                 <div class="article">
                     <h2>What we offer</h2>
                     <p class="subtitle">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque vehicula
@@ -127,7 +127,7 @@
                     <li>Game sum dr sit ame conse</li>
                     <li>Dem psum dr sit ametekot</li>
                 </ul>
-            </section>
+            </article>
             <aside class="excerption">
                 <h2>Testimonial</h2>
                 <p>Nnatoque penatibus tkamet magnis dis parturient montes, nascetur ridiculus mustro lito. Quisque vehicula
@@ -137,7 +137,7 @@
                     <h4>Director of Product Management</h4>
                 </div>
             </aside>
-        </article>
+        </section>
         <div>
             <a href="#to-top-bottom" class="to-top-bottom"></a>
         </div>
