--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -166,10 +166,8 @@
             </ul>
         </div>
         <div class="contacts-part">
+            <h2>Contact Us</h2>
             <ul>
-                <li>
-                    <a href="#">Contact Us</a>
-                </li>
                 <li>
                     <a href="#">TEL: 1-800-234-5678 </a>
                 </li>
