adds services and contacts

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -13,7 +13,7 @@
     <div class="masthead-wrapper">
         <div class="container">
             <header class="masthead">
-                <a href="#" class="logo">golden</a>
+                <a href="#" class="logo">Golden</a>
                 <ul class="nav">
                     <li class="nav-item">
                         <a href="#" class="nav-link">home</a>
@@ -35,22 +35,62 @@
             <section class="promo">
                 <h3 class="promo-title">Welcome To Our Studio!</h3>
                 <h2 class="promo-subtitle">it's nice to meet you</h2>
-                <a href="#" class="promo-btn">tell me more</a>
+                <a href="#" class="btn">tell me more</a>
             </section>
         </div>
     </div>
+    <div class="services-wrapper">
+        <section class="container section services">
+            <header class="section-header">
+                <h3 class="section-header-title">services</h3>
+                <h4 class="section-header-subtitle">Proin iaculis purus consequat sem cure. </h4>
+            </header>
+            <div class="services-list">
+                <ul class="services-item">
+                    <li class="services-card">
+                        <i class="services-icon" title="icon-basket"></i>
+                        <h4 class="services-name">E-Commerce</h4>
+                        <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
+                            posuere odio in tincidunt.</p>
+
+                    </li>
+                    <li class="services-card">
+                        <i class="services-icon"></i>
+                        <h4 class="services-name">Responsive Web</h4>
+                        <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
+                            posuere odio in tincidunt.</p>
+                    </li>
+                    <li class="services-card">
+                        <i class="services-icon"></i>
+                        <h4 class="services-name">Web Security</h4>
+                        <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
+                            posuere odio in tincidunt.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </div>
+    <div class="contact-wrapper">
+        <section class="container">
+            <header class="section-header">
+                <h3 class="section-header-title-contact">Contact us</h3>
+                <h4 class="section-header-subtitle">Proin iaculis purus consequat sem cure.</h4>
+            </header>
+        </section>
+        <div class="contact-form">
+            <form class="contact-form-bio">
+                <input type="text" name="name" placeholder="your name *">
+                <input type="email" name="name" placeholder="your e-mail *">
+                <input type="text" name="name" placeholder="Subject">
+            </form>
+            <form class="contact-form-message">
+                <textarea name="name" placeholder="your massage"></textarea>
+            </form>
+
+        </div>
+        <a href="#" class="btn">send message</a>
+    </div>
+
 </body>
 
 </html>
-
-<!-- masthead-wrapper 
-    -> container
-        -> masthead
-            -> logo
-            -> nav
-                -> nav-item
-                    -> nav-link
-            -> promo
-                -> promo-title
-                -> promo-subtitle
-                -> promo-btn-->
