fixed failes after check

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="masthead-wrapper">
-        <div class="container">
+        <div class="container-promo">
             <header class="masthead">
                 <a href="#" class="logo">Golden</a>
                 <ul class="nav">
@@ -33,66 +33,63 @@
                 </ul>
             </header>
             <section class="promo">
-                <h3 class="promo-title">Welcome To Our Studio!</h3>
-                <h2 class="promo-subtitle">it's nice to meet you</h2>
+                <h1 class="promo-title">Welcome To Our Studio!</h1>
+                <p class="promo-subtitle">it's nice to meet you</p>
                 <a href="#" class="btn">tell me more</a>
             </section>
         </div>
     </div>
-    <div class="services-wrapper">
-        <section class="container section services">
+    <section class="services-wrapper">
+        <div class="container section services">
             <header class="section-header">
                 <h3 class="section-header-title">services</h3>
                 <h4 class="section-header-subtitle">Proin iaculis purus consequat sem cure. </h4>
             </header>
-            <div class="services-list">
-                <ul class="services-item">
-                    <li class="services-card">
-                        <i class="services-icon-basket" title="icon-basket"></i>
-                        <h4 class="services-name">E-Commerce</h4>
-                        <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
-                            posuere odio in tincidunt.</p>
+            <ul class="services-list">
+                <li class="services-card">
+                    <i class="services-icon-basket" title="icon-basket"></i>
+                    <h4 class="services-name">E-Commerce</h4>
+                    <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere
+                        odio in tincidunt.</p>
 
-                    </li>
-                    <li class="services-card">
-                        <i class="services-icon-laptop" title="icon-laptop"></i>
-                        <h4 class="services-name">Responsive Web</h4>
-                        <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
-                            posuere odio in tincidunt.</p>
-                    </li>
-                    <li class="services-card" title="icon-look">
-                        <i class="services-icon-look"></i>
-                        <h4 class="services-name">Web Security</h4>
-                        <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
-                            posuere odio in tincidunt.</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </div>
+                </li>
+                <li class="services-card">
+                    <i class="services-icon-laptop" title="icon-laptop"></i>
+                    <h4 class="services-name">Responsive Web</h4>
+                    <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere
+                        odio in tincidunt.</p>
+                </li>
+                <li class="services-card" title="icon-look">
+                    <i class="services-icon-look"></i>
+                    <h4 class="services-name">Web Security</h4>
+                    <p class="services-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere
+                        odio in tincidunt.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
     <div class="contact-wrapper">
-        <section class="container">
+        <section class="section">
             <header class="section-header">
                 <h3 class="section-header-title-contact">Contact us</h3>
                 <h4 class="section-header-subtitle">Proin iaculis purus consequat sem cure.</h4>
             </header>
         </section>
-        <div class="contact-form">
-            <form action="#">
-                <div class="contact-form-bio">
-                    <input type="text" name="name" required placeholder="your name *">
-                    <input type="email" name="email" required placeholder="your e-mail *">
-                    <input type="text" name="Subject" required placeholder="Subject">
-                </div>
-                <div class="contact-form-message">
-                    <textarea name="message" placeholder="your message"></textarea>
-                </div>
-            </form>
 
-        </div>
-        <button type="submit" class="btn-send">
-            <span>send message</span>
-        </button>
+        <form action="#" class="contact-form">
+            <div class="contact-form-bio">
+                <input type="text" name="name" required placeholder="your name *">
+                <input type="email" name="email" required placeholder="your e-mail *">
+                <input type="text" name="Subject" required placeholder="Subject">
+            </div>
+            <div class="contact-form-message">
+                <textarea name="message" placeholder="your message"></textarea>
+            </div>
+            <button type="submit" class="btn-send">
+                <span>send message</span>
+            </button>
+        </form>
+        
     </div>
 
 </body>
